<resources>
    <string name="app_name">Student Portal</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_ratm">Welcome to RATM</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="login">Login</string>
    <string name="title_activity_student_main">StudentMain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="purpose_student">Student</string>
    <string name="purpose_college">College</string>
    <string name="search">Search</string>
    <string name="profile_image">Profile Image</string>
    <string name="send_message">Send Message</string>
    <string name="request">Request</string>
    <string name="type_a_message">Type a message...</string>
    <string name="this_group_is_for_college_purpose">This group is for college purpose.</string>
    <string name="title_activity_group_details">GroupDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit">Edit</string>
    <string name="group_info">Group Info</string>
    <string name="admin">Admin</string>
    <string name="moderator">Moderator</string>
    <string name="teacher">Teacher</string>
    <string name="ban_the_user">Ban the student</string>
    <string name="show_profile">Show profile</string>
    <string name="promote">Promote</string>
    <string name="demote">Demote</string>
    <string name="options">Options</string>
    <string name="send_documents">Send Documents</string>
    <string name="send_image">Send Image</string>
    <string name="message_requests">Message Requests</string>
    <string name="demote_yourself">Demote Yourself</string>
    <string name="reject">Reject</string>
    <string name="no_message_found">No message requested. Please check attachments.</string>
    <string name="attachment">Attachment</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="no_new_message_requests">No new message requests.</string>
    <string name="search_hint">search_hint</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="birth_date">Birth Date</string>
    <string name="present_address">Present Address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_warning">Password should contain at least 8 characters!</string>
    <string name="email_address">Email Address</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_change_suggestion">Your new password must be different from previously used password.</string>
    <string name="password_change_rule">Must be at least 8 characters.</string>
    <string name="password_change_match_warning">Both password must match.</string>
    <string name="overall_attendance_percentage">Overall attendance percentage: </string>
    <string name="this_month_attendance_percentage">This month attendance percentage: </string>
</resources>