<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.editStudentDetails.EditStudentDetailsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:outlineProvider="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/rosario_bold"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ep_profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/user_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/EditProfileFragment.Profile.ShapeOverlayAppearence" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="#3E90E7"
                android:src="@drawable/ic_twotone_edit_24"
                app:contentPadding="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/ep_profileImage"
                app:layout_constraintEnd_toEndOf="@+id/ep_profileImage"
                app:layout_constraintHorizontal_bias="0.97"
                app:layout_constraintStart_toStartOf="@+id/ep_profileImage"
                app:shapeAppearanceOverlay="@style/EditProfileFragment.ProfileChange.ShapeOverlayAppearence" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ep_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/rosario_bold"
                tools:text="Devanshu Pathsariya"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/ep_profileImage"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="@+id/ep_profileImage"
                app:layout_constraintTop_toBottomOf="@+id/ep_profileImage" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ep_userName">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rosario"
                    android:text="@string/email_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ep_userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/rosario_bold"
                    android:hint=""
                    android:inputType="textEmailAddress"
                    tools:text="devanshu6445@gmail.com"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rosario"
                    android:text="@string/password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ep_userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/rosario_bold"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/ep_passwordWarning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/password_warning"
                    android:textColor="@color/red_btn_bg_color"
                    app:layout_constraintStart_toStartOf="@+id/ep_userPassword"
                    app:layout_constraintTop_toBottomOf="@+id/ep_userPassword" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rosario"
                    android:text="@string/present_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ep_userAddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/rosario_bold"
                    android:hint=""
                    android:inputType="text"
                    tools:text="Tarash mandir gate ke samne"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rosario"
                    android:text="@string/birth_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ep_userDOBDate"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/rosario_bold"
                    android:gravity="center"
                    tools:text="14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ep_userDOBMonth"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ep_userDOBMonth"
                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/rosario_bold"
                    android:gravity="center"
                    tools:text="September"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ep_userDOBYear"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ep_userDOBDate"
                    app:layout_constraintTop_toTopOf="@+id/ep_userDOBDate" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ep_userDOBYear"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/rosario_bold"
                    android:gravity="center"
                    tools:text="1994"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ep_userDOBMonth"
                    app:layout_constraintTop_toTopOf="@+id/ep_userDOBMonth" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ep_userProfileUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_login_button_background"
                android:text="@string/update"
                android:layout_marginVertical="30dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout7"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout7"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>